<resources>
    <string name="app_name">SportApp</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="servicios">Servicios</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="agregar">Agregar</string>
    <string name="hora_inicio">Hora incio</string>
    <string name="preview_hora_inicio">Hora incio …</string>
    <string name="hora_fin">Hora fin</string>
    <string name="preview_hora_fin">Hora fin …</string>
    <string name="lugar">Lugar</string>
    <string name="detalle">Detalle</string>
    <string name="diario">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="fines_de_semana">Fines de semana</string>
    <string name="frecuencia">Frecuencia</string>
    <string-array name="deportes_lista">
        <item>Ciclismo</item>
        <item>Atletismo</item>
    </string-array>
    <string name="entrenamientos">Entrenamientos</string>
    <string name="eventos">Eventos</string>
    <string name="organizador">Organizador</string>
    <string name="puedes_necesitar">Puedes necesitar:</string>
    <string name="agendar">Agendar</string>
    <string name="eliminar_evento">Eliminar de la agenda</string>
    <string name="sesion">Sesión</string>
    <string name="potencia">Potencia media (W)</string>
    <string name="ritmo_minimo">Ritmo cardiaco mínimo</string>
    <string name="ritmo_maximo">Ritmo cardiaco mánimo</string>
    <string name="iniciar">Iniciar</string>
    <string name="finalizar">Finalizar</string>
    <string name="sugerencia_alimenticia_1">Recuerda tomar alimentos alcalinos, ricos en vitaminas y minerales (frutas, verduras y cereales)</string>
    <string name="sugerencia_alimenticia_2">No debes hacer comidas muy abundantes antes del entrenamiento</string>
    <string name="sugerencia_alimenticia_3">Debes descansar correctamente y dormir 8 horas cada día</string>
    <string name="sugerencia_alimenticia_4">Te ayuda tomar suplementos deportivos y batidos de proteínas antes y después del deporte</string>
    <string name="default_chronometer">Tiempo: </string>
    <string name="guardar">Guardar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="pausar">Pausar</string>
    <string name="fecha_actual">Fecha actual</string>
    <string name="agenda">Agenda</string>
    <string name="mis_eventos">Mis eventos</string>
    <string name="idioma">Idioma:</string>
    <string name="consejo_alimenticio">Consejo alimenticio</string>
    <string name="ok">Ok</string>
    <string name="eventos_por_proximidad">Eventos por proximidad</string>
    <string name="rutina_alimenticia_default">Rutina alimenticia</string>
    <string name="solicitar_productos">¿Desea solicitar la rutina alimenticia?</string>
    <string-array name="idiomas">
        <item>Seleccione</item>
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
</resources>