<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetalleEventoActivity">

    <TextView
        android:id="@+id/textTituloEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/eventos"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearHoraInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTituloEvento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textInicioTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/hora_inicio"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textInicioValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/textInicioTitulo"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearHoraFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearHoraInicio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textFinTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/hora_fin"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textFinValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/textInicioTitulo"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearOrganizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearHoraFin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textOrganizadorTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/organizador"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textOrganizadorValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/textInicioTitulo"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDetalleEvento"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linearOrganizador"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/textServiciosEventoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textDetalleEvento"
        android:text="@string/puedes_necesitar"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/botonAgendarEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textServiciosEventoTitulo"
        android:text="@string/agendar" />


</RelativeLayout>